--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,7 @@
 @import "../vendor/normalize.css";
 @import "../vendor/fonts/inter.css";
+.app {
+  background-color: #202020;
+}
 
 /*# sourceMappingURL=style.css.map */
