--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,4 +2,15 @@
 
 .app {
   background-color: $background-color;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+
+  &__content {
+    margin: 0 auto;
+    max-width: 1280px;
+    color: $text-color;
+    font-family: 'Inter', serif;
+  }
 }
