--- a/src/pages/variables.scss
+++ b/src/pages/variables.scss
@@ -1,5 +1,20 @@
+$black-text: #000000;
 $background-color: #202020;
+$card-background: #222222;
+$technologies-background: #303030;
+$input-background: #2F2F2F;
+$inactive-icon: #313131;
+$line-color: #424242;
+$dark-text-color: #8B8B8B;
+$darkened-text: #A0A0A0;
+$light-line-color: #DADADA;
+$separator-color: #E6E6E6;
 $text-color: #FFFFFF;
+$green-button: #3DDC84;
+$active-icon: #2BE080;
+$banner-background: #073042;
+$blue-button: #4285F4;
+$red-color: #EE3465;
 
 @mixin flexible-center {
   display: flex;
