--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -2,4 +2,5 @@
 @import "../vendor/fonts/inter.css";
 
 @import "../components/App/App.scss";
+@import "../components/Header/Header.scss";
 @import "../components/Footer/Footer.scss";
