--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -3,4 +3,7 @@
 
 @import "../components/App/App.scss";
 @import "../components/Header/Header.scss";
+@import "../components/Main/Main.scss";
 @import "../components/Footer/Footer.scss";
+
+@import "../components/Promo/Promo.scss";
