--- a/src/pages/variables.scss
+++ b/src/pages/variables.scss
@@ -21,3 +21,10 @@ $red-color: #EE3465;
   justify-content: center;
   align-items: center;
 }
+
+@mixin content-box {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 70px;
+  box-sizing: border-box;
+}
