feat: add and stylize AboutProject

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -7,3 +7,4 @@
 @import "../components/Footer/Footer.scss";
 
 @import "../components/Promo/Promo.scss";
+@import "../components/AboutProject/AboutProject.scss";
