--- a/src/pages/variables.scss
+++ b/src/pages/variables.scss
@@ -1,7 +1,7 @@
 $black-text: #000000;
 $background-color: #202020;
 $card-background: #222222;
-$technologies-background: #303030;
+$timeline-background: #303030;
 $input-background: #2F2F2F;
 $inactive-icon: #313131;
 $line-color: #424242;
