--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -8,3 +8,4 @@
 
 @import "../components/Promo/Promo.scss";
 @import "../components/AboutProject/AboutProject.scss";
+@import "../components/Techs/Techs.scss";
