feat: add and stylize AboutMe

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -9,3 +9,4 @@
 @import "../components/Promo/Promo.scss";
 @import "../components/AboutProject/AboutProject.scss";
 @import "../components/Techs/Techs.scss";
+@import "../components/AboutMe/AboutMe.scss";
