feat: add and stylize Portfolio

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -10,3 +10,4 @@
 @import "../components/AboutProject/AboutProject.scss";
 @import "../components/Techs/Techs.scss";
 @import "../components/AboutMe/AboutMe.scss";
+@import "../components/Portfolio/Portfolio.scss";
