feat: add and stylize Movies

--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -1,3 +1,4 @@
+/*
 @import "../../pages/variables.scss";
 
 @keyframes preloader-inside-white {
@@ -86,3 +87,4 @@
   background: #FF6838;
   animation: preloader-inside-red 1s ease-in-out infinite;
 }
+*/
