--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,6 +4,7 @@
 @import "../components/App/App.scss";
 @import "../components/Header/Header.scss";
 @import "../components/Main/Main.scss";
+@import "../components/Movies/Movies.scss";
 @import "../components/Footer/Footer.scss";
 
 @import "../components/Promo/Promo.scss";
@@ -11,3 +12,7 @@
 @import "../components/Techs/Techs.scss";
 @import "../components/AboutMe/AboutMe.scss";
 @import "../components/Portfolio/Portfolio.scss";
+
+@import "../components/SearchForm/SearchForm.scss";
+
+
