--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,6 +99,12 @@
   box-sizing: border-box;
 }
 
+.movies {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer {
   width: 100%;
   min-height: 172px;
@@ -184,6 +190,9 @@
   display: flex;
   flex-direction: column;
   list-style: none;
+}
+.search-form {
+  min-height: 247px;
 }
 
 /*# sourceMappingURL=style.css.map */
