feat: add and stylize SearchForm

--- a/src/pages/variables.scss
+++ b/src/pages/variables.scss
@@ -5,6 +5,7 @@ $block-background: #272727;
 $timeline-background: #303030;
 $input-background: #2F2F2F;
 $inactive-icon: #313131;
+$inactive-tumbler: #343434;
 $line-color: #424242;
 $dark-text-color: #8B8B8B;
 $darkened-text: #A0A0A0;
@@ -12,7 +13,7 @@ $light-line-color: #DADADA;
 $separator-color: #E6E6E6;
 $text-color: #FFFFFF;
 $green-button: #3DDC84;
-$active-icon: #2BE080;
+$active-tumbler: #2BE080;
 $banner-background: #073042;
 $blue-button: #4285F4;
 $red-color: #EE3465;
