--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: url(../../images/banner-image.svg) no-repeat right 70px top 149px;
+    background: url(../../images/banner-image.svg) no-repeat no-repeat right 70px top 149px;
     background-size: 310px 304px;
   }
 
