fix: add to SearchForm bottom border

--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -5,6 +5,7 @@
   min-height: 247px;
   padding: 60px 0 69px;
   box-sizing: border-box;
+  border-bottom: 1px solid $line-color;
 
   &__form {
     width: 100%;
