fix: rewrite Preloader styles using preprocessor

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -14,5 +14,6 @@
 @import "../components/Portfolio/Portfolio.scss";
 
 @import "../components/SearchForm/SearchForm.scss";
+@import "../components/Preloader/Preloader.scss";
 
 
