--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -1,4 +1,3 @@
-/*
 @import "../../pages/variables.scss";
 
 @keyframes preloader-inside-white {
@@ -48,43 +47,42 @@
   height: 100%;
   z-index: 10;
   padding: 20px;
-}
 
-.preloader__container {
-  width: 100px;
-  height: 100px;
-  position: relative;
-}
+  &__container {
+    width: 100px;
+    height: 100px;
+    position: relative;
+  }
 
-.preloader__round {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #FF6838;
-  border-radius: 50px;
-}
+  &__round {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: $green-button;
+    border-radius: 50px;
 
-.preloader__round::after,
-.preloader__round::before {
-  content: '';
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 50px;
-}
+    &::after,
+    &::before {
+      content: '';
+      width: 100px;
+      height: 100px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 50px;
+    }
 
-.preloader__round::after {
-  background: white;
-  animation: preloader-inside-white 1s ease-in-out infinite;
-}
+    &::after {
+      background: white;
+      animation: preloader-inside-white 1s ease-in-out infinite;
+    }
 
-.preloader__round::before {
-  z-index: 10;
-  background: #FF6838;
-  animation: preloader-inside-red 1s ease-in-out infinite;
+    &::before {
+      z-index: 10;
+      background: $green-button;
+      animation: preloader-inside-red 1s ease-in-out infinite;
+    }
+  }
 }
-*/
