feat: add and stylize MoviesCardList and MoviesCard

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -15,5 +15,7 @@
 
 @import "../components/SearchForm/SearchForm.scss";
 @import "../components/Preloader/Preloader.scss";
+@import "../components/MoviesCardList/MoviesCardList.scss";
+@import "../components/MoviesCard/MoviesCard.scss";
 
 
