--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -282,4 +282,26 @@
   animation: preloader-inside-red 1s ease-in-out infinite;
 }
 
+.movies__container {
+  list-style: none;
+}
+
+.movie {
+  width: 270px;
+  height: 218px;
+  background-color: #222222;
+}
+.movie__image {
+  width: 100%;
+  height: 151px;
+  object-fit: cover;
+  display: block;
+}
+.movie__description {
+  display: grid;
+  gap: 10px 24px;
+  padding: 14px 12px;
+  box-sizing: border-box;
+}
+
 /*# sourceMappingURL=style.css.map */
