--- a/src/components/MoviesCardList/MoviesCardList.scss
+++ b/src/components/MoviesCardList/MoviesCardList.scss
@@ -12,19 +12,27 @@
   }
 
   &__more {
-    width: 100%;
-    height: 36px;
-    border: none;
-    background-color: $input-background;
-    border-radius: 6px;
-    padding: 11px;
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    color: $text-color;
-    cursor: pointer;
-    margin: 50px 0 80px;
+    padding: 50px 0 80px;
+
+    &-button {
+      width: 100%;
+      height: 36px;
+      border: none;
+      background-color: $input-background;
+      border-radius: 6px;
+      padding: 11px;
+      box-sizing: border-box;
+      text-align: center;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 15px;
+      color: $text-color;
+      cursor: pointer;
+    }
+
+    &-span {
+      display: block;
+      height: 10px;
+    }
   }
 }
