--- a/src/pages/variables.scss
+++ b/src/pages/variables.scss
@@ -18,6 +18,8 @@ $banner-background: #073042;
 $blue-button: #4285F4;
 $red-color: #EE3465;
 
+$header-height: 74px;
+
 @mixin flexible-center {
   display: flex;
   justify-content: center;
