--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -17,5 +17,6 @@
 @import "../components/Preloader/Preloader.scss";
 @import "../components/MoviesCardList/MoviesCardList.scss";
 @import "../components/MoviesCard/MoviesCard.scss";
+@import "../components/Profile/Profile.scss";
 
 
