--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   color: $text-color;
   font-family: 'Inter', serif;
 }
