--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,8 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 74px;
-  height: calc(100vh - $header-height);
+  padding-top: calc(74px - 17px);
+  padding-bottom: 70px;
 
   &__greeting {
     font-weight: 500;
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 123px 0 220px;
+    padding: calc(123px - 16px) 0 220px;
     border: none;
     margin: 0;
 
