--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -4,11 +4,11 @@
   width: 100%;
   height: 648px;
   background-color: $banner-background;
-  margin-top: -74px;
+  margin-top: -$header-height;
 
   &__container {
     @include content-box;
-    padding-top: 149px;
+    padding-top: calc(75px + $header-height);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
