feat: add and stylize authorization login and register

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -18,5 +18,7 @@
 @import "../components/MoviesCardList/MoviesCardList.scss";
 @import "../components/MoviesCard/MoviesCard.scss";
 @import "../components/Profile/Profile.scss";
+@import "../components/Login/Login.scss";
+@import "../components/AuthorizationForm/AuthorizationForm.scss";
 
 
