--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -304,4 +304,21 @@
   box-sizing: border-box;
 }
 
+.login {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 70px;
+  box-sizing: border-box;
+  margin-top: -74px;
+}
+.login__form {
+  display: flex;
+}
+
+.authorization__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*# sourceMappingURL=style.css.map */
