feat: add and stylize NotFoundPage

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -20,5 +20,6 @@
 @import "../components/Profile/Profile.scss";
 @import "../components/Login/Login.scss";
 @import "../components/AuthorizationForm/AuthorizationForm.scss";
+@import "../components/NotFoundPage/NotFoundPage.scss";
 
 
