--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,7 +1,7 @@
 @import "../../pages/variables.scss";
 
 .login {
-  margin: -$header-height auto 0 auto;
+  margin: 0 auto;
   padding: 70px 0;
   display: flex;
   flex-direction: column;
