--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -321,4 +321,15 @@
   align-items: center;
 }
 
+.not-found-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.not-found-page__block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*# sourceMappingURL=style.css.map */
