fix: fix navigation

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -13,6 +13,7 @@
 @import "../components/AboutMe/AboutMe.scss";
 @import "../components/Portfolio/Portfolio.scss";
 
+@import "../components/Navigation/Navigation.scss";
 @import "../components/SearchForm/SearchForm.scss";
 @import "../components/Preloader/Preloader.scss";
 @import "../components/MoviesCardList/MoviesCardList.scss";
