--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -6,6 +6,8 @@
     @include flexible-center;
     gap: 16px;
     list-style: none;
+    margin: 0;
+    padding: 0;
 
     &-link {
       font-weight: 400;
