--- a/src/components/AuthorizationForm/AuthorizationForm.scss
+++ b/src/components/AuthorizationForm/AuthorizationForm.scss
@@ -1,22 +1,22 @@
 @import "../../pages/variables.scss";
 
+.authorization__title {
+  margin: 40px 0;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+}
+
 .authorization__form {
   width: 100%;
+  height: 380px;
   display: flex;
   flex-direction: column;
-
-  &-title {
-    margin:0;
-    padding: 40px 0;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-  }
+  justify-content: space-between;
 
   &-fieldset {
     border: 0;
     margin: 0;
-    padding: 0 0 65px 0;
     display: flex;
     flex-direction: column;
   }
@@ -73,8 +73,7 @@
   font-size: 14px;
   line-height: 17px;
   text-align: center;
-  margin: 0;
-  padding-top: 16px;
+  margin: 16px 0 0;
 
   &-text {
     color: $blue-button;
