--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -3,7 +3,14 @@
 .login {
   margin: 0 auto;
   padding: 70px 0;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   max-width: 396px;
+}
+
+@media (max-width: 768px) {
+  .login {
+    padding-top: 232px;
+  }
 }
