--- a/src/components/MoviesCard/MoviesCard.scss
+++ b/src/components/MoviesCard/MoviesCard.scss
@@ -52,3 +52,14 @@
     color: $dark-text-color;
   }
 }
+
+@media (max-width: 1024px) {
+  .movie {
+    width: 339px;
+    height: 257px;
+
+    &__image {
+      height: 190px;
+    }
+  }
+}
