--- a/src/components/MoviesCardList/MoviesCardList.scss
+++ b/src/components/MoviesCardList/MoviesCardList.scss
@@ -1,9 +1,10 @@
 @import "../../pages/variables.scss";
+
 .movies-section {
 
   &__container {
     margin: 0;
-    padding: 70px 0 30px 0;
+    padding: 80px 0 30px 0;
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, 270px);
@@ -33,6 +34,16 @@
     &-span {
       display: block;
       height: 10px;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .movies-section {
+
+    &__container {
+      grid-template-columns: repeat(auto-fill, 339px);
+      gap: 36px 30px;
     }
   }
 }
