--- a/src/components/NotFoundPage/NotFoundPage.scss
+++ b/src/components/NotFoundPage/NotFoundPage.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 5px;
   }
 
   &__error {
@@ -36,5 +37,10 @@
     font-size: 14px;
     line-height: 17px;
   }
+}
 
+@media (max-width: 768px) {
+  .not-found-page {
+    padding-top: 408px;
+  }
 }
