--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -13,7 +13,7 @@
   }
 
   &__links {
-    padding: 50px 0 125px;
+    padding: calc(50px - $portfolio-top-padding) 0 calc(125px - $portfolio-bottom-padding);
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -37,7 +37,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 0 19px;
+      padding: $portfolio-top-padding 0 $portfolio-bottom-padding;
       transition: opacity .3s ease-in-out;
 
       &:hover {
@@ -51,6 +51,17 @@
 
     &-arrow {
 
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .portfolio {
+    @include content-box-tablet;
+    min-height: 390px;
+
+    &__links {
+      padding-bottom: calc(90px - $portfolio-bottom-padding);
     }
   }
 }
