--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -2,18 +2,22 @@
 
 .promo {
   width: 100%;
-  height: 648px;
+  min-height: 648px;
   background-color: $banner-background;
   margin-top: -$header-height;
 
   &__container {
     @include content-box;
     padding-top: calc(75px + $header-height);
+    padding-bottom: 75px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: url(../../images/banner-image.svg) no-repeat no-repeat right 70px top 149px;
-    background-size: 310px 304px;
   }
 
   &__title {
@@ -33,7 +37,8 @@
     margin: 36px 0 0 0;
   }
 
-  &__button {
+  &__link {
+    height: 36px;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
@@ -42,5 +47,61 @@
     border-radius: 3px;
     margin-top: 146px;
     cursor: pointer;
+    text-decoration: none;
+    color: $text-color;
+    box-sizing: border-box;
+  }
+
+  &__image {
+    width: 310px;
+    height: 304px;
+    pointer-events: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  .promo {
+
+    &__container {
+      padding-top: calc(140px + $header-height);
+      padding-bottom: 76px;
+      flex-direction: column;
+      align-items: center;
+      gap: 48px;
+    }
+
+    &__image {
+      order: 1;
+    }
+
+    &__text {
+      order: 2;
+      align-items: center;
+    }
+
+    &__title {
+      font-size: 40px;
+      line-height: 50px;
+      text-align: center;
+    }
+
+    &__subtitle {
+      text-align: center;
+      margin-top: 22px;
+    }
+
+    &__link {
+      margin-top: 92px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .promo {
+
+    &__container {
+      @include content-box-tablet;
+
+    }
   }
 }
