--- a/src/components/Techs/Techs.scss
+++ b/src/components/Techs/Techs.scss
@@ -49,12 +49,44 @@
       width: 90px;
       background-color: $timeline-background;
       border-radius: 10px;
-      padding: 21px 0 20px;
+      padding: 21px 0 22px;
       font-weight: 400;
       font-size: 14px;
       line-height: 17px;
       text-align: center;
       letter-spacing: -0.04em;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .technologies {
+    min-height: 567px;
+
+
+    &__container {
+      @include content-box-tablet;
+      padding-top: 90px;
+      padding-bottom: 90px;
+    }
+
+    &__information {
+      padding: 80px 0 83px;
+      gap: 22px;
+
+      &-text {
+        font-size: 12px;
+        line-height: 18px;
+      }
+    }
+
+    &__list {
+
+      &-item {
+        font-size: 12px;
+        line-height: 15px;
+        padding: 21px 0;
+      }
     }
   }
 }
