--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -8,6 +8,7 @@
 @import "../components/Footer/Footer.scss";
 
 @import "../components/Promo/Promo.scss";
+@import "../components/Logo/Logo.scss";
 @import "../components/AboutProject/AboutProject.scss";
 @import "../components/Techs/Techs.scss";
 @import "../components/AboutMe/AboutMe.scss";
