--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -158,6 +158,15 @@
   background-color: #073042;
 }
 
+.logo__link {
+  flex-basis: 100px;
+}
+
+.logo {
+  width: 38px;
+  height: 38px;
+}
+
 .technologies {
   width: 100%;
   background-color: #272727;
