--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -14,6 +14,10 @@
       font-size: 13px;
       line-height: 18px;
 
+      &:first-child {
+        display: none;
+      }
+
       &-item {
         color: $text-color;
         text-decoration: none;
