--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -9,6 +9,8 @@
 
 @import "../components/Promo/Promo.scss";
 @import "../components/Logo/Logo.scss";
+@import "../components/ProfileButton/ProfileButton.scss";
+@import "../components/NavTab/NavTab.scss";
 @import "../components/AboutProject/AboutProject.scss";
 @import "../components/Techs/Techs.scss";
 @import "../components/AboutMe/AboutMe.scss";
