--- a/src/components/NavTab/NavTab.scss
+++ b/src/components/NavTab/NavTab.scss
@@ -10,16 +10,22 @@
 
 @media (max-width: 768px) {
   .navtab {
-    right: -100%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    transition-duration: .3s;
 
     &_active {
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: fixed;
-      top: 0;
-      right: 0;
       background-color: rgba(0, 0, 0, 0.3);
+      transition-duration: .3s;
+
+      & .navtab__content {
+        right: 0;
+        transition-duration: .35s;
+      }
 
       & .navigation {
         display: block;
@@ -46,6 +52,7 @@
           }
         }
       }
+
       & .profile-button {
         display: flex;
         flex-basis: 0;
@@ -63,6 +70,10 @@
       height: 100%;
       width: 520px;
       background-color: $background-color;
+      position: fixed;
+      top: 0;
+      right: -100%;
+      transition-duration: .35s;
     }
   }
 }
