--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,6 +1,12 @@
 @import "../vendor/normalize.css";
 @import "../vendor/fonts/inter.css";
 
+body {
+  margin: 0;
+  background-color: #202020;
+  width: 100%;
+}
+
 @import "../components/App/App.scss";
 @import "../components/Header/Header.scss";
 @import "../components/Main/Main.scss";
