--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  min-width: 320px;
   color: $text-color;
   font-family: 'Inter', serif;
   position: relative;
