--- a/src/components/AboutProject/AboutProject.scss
+++ b/src/components/AboutProject/AboutProject.scss
@@ -45,6 +45,9 @@
 
   &__timeline {
     @include flexible-center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
 
     &-block:first-child {
       width: 20%;
@@ -56,9 +59,6 @@
 
     &-week {
       height: 36px;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 17px;
       text-align: center;
       margin: 0;
       padding: 9px 0;
@@ -76,8 +76,6 @@
 
     &-part {
       font-weight: 500;
-      font-size: 14px;
-      line-height: 17px;
       text-align: center;
       color: $dark-text-color;
       margin: 14px 0 0;
@@ -103,6 +101,62 @@
         font-size: 12px;
         line-height: 18px;
         margin-top: 22px;
+      }
+    }
+  }
+}
+
+@media (max-width: 540px) {
+  .about {
+    padding: 70px 18px;
+
+    &__title {
+      font-size: 18px;
+      line-height: 22px;
+      letter-spacing: -0.04em;
+      padding-bottom: 28px;
+    }
+
+    &__information {
+      padding: 60px 0;
+      flex-direction: column;
+      gap: 56px;
+    }
+
+    &__article {
+
+      &-title {
+        font-size: 18px;
+        line-height: 22px;
+        letter-spacing: -0.04em;
+      }
+
+      &-text {
+        font-size: 11px;
+        line-height: 16px;
+        margin-top: 16px;
+      }
+    }
+
+    &__timeline {
+      font-size: 11px;
+      line-height: 13px;
+
+      &-week {
+        height: 35px;
+        padding: 11px 0;
+      }
+
+      &-block:first-child {
+        min-width: 100px;
+      }
+
+      &-block:last-child {
+        min-width: 184px;
+      }
+
+      &-part {
+        margin-top: 10px;
       }
     }
   }
