--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -6,3 +6,10 @@
   width: 38px;
   height: 38px;
 }
+
+@media (max-width: 540px) {
+  .logo__link {
+    flex-basis: 0;
+    align-self: center;
+  }
+}
