--- a/src/components/MoviesCardList/MoviesCardList.scss
+++ b/src/components/MoviesCardList/MoviesCardList.scss
@@ -47,3 +47,15 @@
     }
   }
 }
+
+@media (max-width: 540px) {
+  .movies-section {
+    padding: 0 10px;
+
+    &__container {
+      padding-top: 50px;
+      grid-template-columns: 300px;
+      row-gap: 20px;
+    }
+  }
+}
