--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -7,6 +7,7 @@
   align-items: center;
   padding-top: calc(74px - 17px);
   padding-bottom: 70px;
+  height: calc(100vh - $header-height);
 
   &__greeting {
     font-weight: 500;
@@ -20,9 +21,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: calc(123px - 16px) 0 220px;
+    padding: calc(123px - 16px) 0;
     border: none;
     margin: 0;
+    height: 100%;
 
     &-label {
       width: 410px;
@@ -61,7 +63,7 @@
       color: $red-color;
       grid-column-start: 1;
       grid-column-end: 3;
-      height: 16px;
+      min-height: 16px;
       font-weight: 400;
       font-size: 11px;
       line-height: 13px;
@@ -91,6 +93,30 @@
 
 @media (max-width: 768px) {
   .profile {
-    padding-top: calc(236px + $header-height);
+    padding-top: 236px;
+  }
+}
+
+@media (max-width: 540px) {
+  .profile {
+    padding: 70px 30px 40px;
+
+    &__form {
+      padding: 80px 0;
+
+      &-label {
+        width: 230px;
+      }
+    }
+
+    &__update-button {
+      font-size: 12px;
+      line-height: 15px;
+    }
+
+    &__signout-button {
+      font-size: 12px;
+      line-height: 15px;
+    }
   }
 }
