--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -104,3 +104,31 @@
     }
   }
 }
+
+@media (max-width: 540px) {
+  .promo {
+    &__container {
+      padding: calc(70px + $header-height) 0 30px;
+      gap: 44px;
+    }
+
+    &__title {
+      font-size: 30px;
+      line-height: 38px;
+      letter-spacing: -0.04em;
+    }
+
+    &__subtitle {
+      margin-top: 24px;
+    }
+
+    &__link {
+      margin-top: 80px;
+    }
+
+    &__image {
+      width: 210px;
+      height: 206px;
+    }
+  }
+}
