--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -115,3 +115,21 @@
     padding: 80px 0 50px;
   }
 }
+
+@media (max-width: 540px) {
+  .search {
+    min-height: 248px;
+    padding-left: 14px;
+    padding-right: 14px;
+
+    &__form-input {
+      font-size: 11px;
+      line-height: 17px;
+    }
+
+    &__sorts-text {
+      font-size: 11px;
+      line-height: 18px;
+    }
+  }
+}
