--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -31,5 +31,6 @@ body {
 @import "../components/Login/Login.scss";
 @import "../components/AuthorizationForm/AuthorizationForm.scss";
 @import "../components/NotFoundPage/NotFoundPage.scss";
+@import "../components/InfoTooltip/InfoTooltip.scss";
 
 
