--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -15,6 +15,7 @@ body {
 
 @import "../components/Promo/Promo.scss";
 @import "../components/Logo/Logo.scss";
+@import "../components/Title/Title.scss";
 @import "../components/ProfileButton/ProfileButton.scss";
 @import "../components/NavTab/NavTab.scss";
 @import "../components/AboutProject/AboutProject.scss";
