--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -12,7 +12,6 @@
     position: relative;
 
     &-input {
-      outline: 0;
       width: 100%;
       height: 46px;
       background-color: $input-background;
@@ -44,6 +43,11 @@
       right: 6px;
       top: 6px;
       cursor: pointer;
+      transition: background-color ease-in-out .2s;
+
+      &:hover {
+        background-color: $green-button;
+      }
     }
   }
 
