--- a/src/components/AuthorizationForm/AuthorizationForm.scss
+++ b/src/components/AuthorizationForm/AuthorizationForm.scss
@@ -7,6 +7,11 @@
   display: flex;
   flex-direction: column;
   max-width: 396px;
+  height: 100vh;
+
+  & .logo {
+    flex-basis: 0;
+  }
 
   &__title {
     margin: 40px 0;
@@ -17,7 +22,7 @@
 
   &__form {
     width: 100%;
-    height: 380px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -69,7 +74,7 @@
     }
 
     &-button {
-      margin-top: 69px;
+      margin-top: 64px;
       background-color: $blue-button;
       border-radius: 3px;
       font-weight: 500;
@@ -88,6 +93,7 @@
     line-height: 17px;
     text-align: center;
     margin: 16px 0 0;
+    color: $dark-text-color;
 
     &-text {
       color: $blue-button;
@@ -97,16 +103,28 @@
 
 }
 
+@media (max-width: 768px) {
+  .authorization {
+    padding: 232px 0;
+
+    &__form-button {
+      margin-top: 69px;
+    }
+  }
+}
+
 @media (max-width: 540px) {
 
   .authorization {
+    padding: 56px 0 30px;
 
     &__title {
       margin: 50px auto 80px auto;
     }
 
     &__form {
-      height: 460px;
+      padding: 0 30px;
+      box-sizing: border-box;
 
       &-button {
         font-size: 12px;
