feat: add ProtectedRoute and realize registration and authorization

--- a/src/components/AuthorizationForm/AuthorizationForm.scss
+++ b/src/components/AuthorizationForm/AuthorizationForm.scss
@@ -84,6 +84,11 @@
       color: $text-color;
       border: none;
       cursor: pointer;
+
+      &_inactive {
+        background-color: $inactive-tumbler;
+        color: $dark-text-color;
+      }
     }
   }
 
