--- a/src/components/AuthorizationForm/AuthorizationForm.scss
+++ b/src/components/AuthorizationForm/AuthorizationForm.scss
@@ -69,7 +69,8 @@
       font-weight: 400;
       font-size: 10px;
       line-height: 12px;
-      height: 12px;
+      min-height: 24px;
+      box-sizing: border-box;
       padding: 6px 0;
     }
 
