--- a/src/components/InfoTooltip/InfoTooltip.scss
+++ b/src/components/InfoTooltip/InfoTooltip.scss
@@ -61,10 +61,11 @@
     max-width: 358px;
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 18px;
+    line-height: 22px;
     color: $text-color;
     text-align: center;
+    font-family: "Inter", serif;
   }
 }
 
