--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -42,11 +42,16 @@
 }
 
 .preloader {
+  position: absolute;
+  top: 0;
+  left: 0;
   @include flexible-center;
   width: 100%;
   height: 100%;
   z-index: 10;
   padding: 20px;
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, .6);
 
   &__container {
     width: 100px;
