--- a/src/components/MoviesCardList/MoviesCardList.scss
+++ b/src/components/MoviesCardList/MoviesCardList.scss
@@ -38,7 +38,11 @@
 
     &-span {
       display: block;
-      height: 10px;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 16px;
+      width: 100%;
+      text-align: center;
     }
   }
 }
