--- a/src/components/AuthorizationForm/AuthorizationForm.scss
+++ b/src/components/AuthorizationForm/AuthorizationForm.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   max-width: 396px;
-  height: 100vh;
+  width: 100%;
 
   & .logo {
     flex-basis: 0;
